--- a/nitroamo_files/thank_you_page.html
+++ b/nitroamo_files/thank_you_page.html
@@ -54,7 +54,7 @@
         <script>
             function goBack() {
                 // Вставьте ваш URL вместо https://example.com
-                window.location.href = 'https://misha62785.github.io/curnik/';
+                window.location.href = 'https://misha62785.github.io/fertilizer/';
             }
         </script>
     </div>
