--- a/index.htm
+++ b/index.htm
@@ -409,10 +409,10 @@ src="https://www.facebook.com/tr?id=1156711099115064&ev=PageView&noscript=1"
             <input class="order_form_0" type="tel" name="phone" placeholder="Ваш номер телефона" required="required" inputmode="tel">
             <select class="field select-wrapper" name="product" required="">
               <option value="1">Обрати кількість</option>
-              <option value="1">250мл  - 199грн</option>
+              <option value="1">0.5мл  - 199грн</option>
               <option value="2"> 1л - 299грн </option>
               <option value="3"> 2л -499  грн (економія 100 грн)</option>
-              <option value="4">3л - 799 грн (250мл в подарунок )</option>
+              <option value="4">3л - 799 грн (0.5 в подарунок )</option>
               <option value="7">Інша вага</option>
             </select>
             <button class="button button-m">Замовити зі знижкою</button>
